# Lab_Simulations_Python

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  Simulations.py  index.html  pyproject.toml
.github/workflows/: ci.yml  pages.yml
.streamlit/: config.toml
docs/source/: api.rst  conf.py  index.rst
pages/: 1_Linear_Motion.py  1_Projectile_Motion.py  2_Free_Fall.py  2_Oscillations.py  2_Projectile_Motion.py  3_Oscillations.py  3_Projectile_Motion.py  4_Circular_Motion.py  5_Oscillations.py  6_Newtons_Laws.py  7_Work_Energy.py  8_Momentum.py
src/lab_simulations_python/: circular_motion.py  free_fall.py  i18n.py  linear_motion.py  momentum.py  newtons_laws.py  oscillations.py  projectile.py  work_energy.py
tests/: test_circular_motion.py  test_free_fall.py  test_i18n.py  test_linear_motion.py  test_momentum.py  test_newtons_laws.py  test_oscillations.py  test_projectile.py  test_work_energy.py
