[project]
authors = [{name = "Alexander Moreno Briceño", email = "alexander.moreno@uan.edu.co"}]
dependencies = []
name = "Lab_Simulations_Python"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
lab_simulations_python = { path = ".", editable = true }

[tool.pixi.tasks]
