[project]
authors = [{name = "Alexander Moreno Briceño", email = "alexander.moreno@uan.edu.co"}]
dependencies = []
name = "Lab_Simulations_Python"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
lab_simulations_python = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = ">=3.14.3,<3.15"
numpy = ">=2.4.2,<3"
matplotlib = ">=3.10.8,<4"
streamlit = ">=1.54.0,<2"
pytest = ">=9.0.2,<10"
sphinx = ">=9.1.0,<10"
plotly = ">=6.8.0,<7"
