[project]
authors = [{name = "Alexander Moreno Briceño", email = "alexander.moreno@uan.edu.co"}]
dependencies = []
name = "Lab_Simulations_Python"
requires-python = ">= 3.14"
version = "0.1.0"
license = "MIT"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
lab_simulations_python = { path = ".", editable = true }

[tool.pixi.tasks]
app = "streamlit run Simulations.py"
test = "pytest"
lint = "ruff check ."
fmt = "ruff format ."
docs = "sphinx-build -b html docs/source docs/build/html"

[tool.pixi.dependencies]
python = ">=3.14.3,<3.15"
numpy = ">=2.4.2,<3"
streamlit = ">=1.54.0,<2"
pytest = ">=9.0.2,<10"
sphinx = ">=9.1.0,<10"
plotly = ">=6.8.0,<7"
ruff = ">=0.15.21,<0.16"
pre-commit = ">=4.6.0,<5"
sphinx-book-theme = ">=1.2.0,<2"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
